--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -8,4 +8,9 @@
 
 @import 'abstracts/variables';
 @import 'base/typography';
+@import 'base/base';
 @import 'layout/header';
+@import 'layout/section';
+@import 'layout/article';
+@import 'layout/footer';
+@import 'layout/forms-login';
