page post, page register

--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -3,7 +3,6 @@
     Width:1280px;
     margin: 65px 0px 0px 0px;
 }
-
 .fecha{
     font-weight: $poppins-regular;
 }
@@ -17,4 +16,9 @@
     font-weight: $poppins-bold;
     line-height: 30px;
     text-align: left;
+}
+body{
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    color:#171717;
 }
