--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -12,5 +12,10 @@
 @import 'layout/header';
 @import 'layout/section';
 @import 'layout/article';
-@import 'layout/footer';
 @import 'layout/forms-login';
+@import 'layout/login';
+@import 'layout/subscription';
+@import 'layout/post';
+@import 'layout/footer';
+@import 'components/buttons';
+@import 'components/inputs';
